fix(reporter): improve message handling to support source-specific messages and warfarin craziness